<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.expenditrack.expenditrack.editReceipt">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/confirmToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_manageReceipt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:scrollbars="none">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/manage_receipt"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:id="@+id/center_point"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/left_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/center_point"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/rc_shop"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/rc_date"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/rc_price"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/rc_user"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@mipmap/rc_category"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/right_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/center_point"
                android:layout_alignParentRight="true"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">
                >

                <EditText
                    android:id="@+id/supplier_name_field_confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Supplier"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/date_of_purchase"
                    android:inputType="none"
                    android:onClick="setDate"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="4dp"
                    android:background="#000000" />

                <EditText
                    android:id="@+id/total_spent_field_confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/total_spent"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/buyer_name_field_confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/buyer"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="Category"></Spinner>

            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/confirmReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_reg"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="536dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
